# Diesel-MT

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pytest.ini  requirements-teacher-hymt2-bnb.txt  requirements-teacher-hymt2-gguf.txt  requirements-teacher-hymt2.txt  requirements.txt
configs/: deepseek_translation_ab.yaml  deepseek_translation_review.yaml  deepseek_translation_review_calibration.yaml  hymt2_decode_ab.yaml  hymt2_distillation.yaml  hymt2_distillation_d1.yaml  hymt2_distillation_d1_20route_composite.yaml  hymt2_distillation_d1_manual_review.yaml  hymt2_distillation_d1_zh_conversion.yaml  hymt2_distillation_d1_zh_conversion_manual_review.yaml  hymt2_distillation_manual_review.yaml  hymt2_teacher_artifact.lock.json  hymt2_teacher_benchmark.lock.json  hymt2_teacher_benchmark.yaml  hymt2_teacher_calibration_review.yaml  hymt2_teacher_prompt_decode.yaml  hymt2_teacher_prompt_decode_zh_conversion.yaml  hymt2_teacher_runtime.yaml  hymt2_teacher_selection.yaml  m0_manual_review.yaml  m0_manual_review_20route.yaml  micro_m2m100_deployment.json  mvp_60m_data_chain.yaml  mvp_60m_distillation_sources.lock.json  mvp_60m_distillation_sources.yaml  mvp_60m_mixed_corpus.yaml  mvp_60m_teacher_generation.yaml  mvp_60m_teacher_review.yaml  mvp_direction_sampling.yaml  mvp_distillation_ab.yaml  mvp_e8_d2_v48k.yaml  mvp_evaluation.yaml  mvp_m1_acceptance.yaml  mvp_model_contamination.yaml  mvp_model_data.lock.json  mvp_model_data.yaml  mvp_mt_evaluation.lock.json  (+9 more)
tools/tokenizer-checkpoint/: Cargo.toml
tools/tokenizer-checkpoint/src/: main.rs
(+323 files in other folders)
